Organize documentation and add comprehensive walkthrough

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,7 +1,5 @@
-"""
-GitHub Actions CI/CD Pipeline
-Automated testing and deployment
-"""
+# GitHub Actions CI/CD Pipeline
+# Automated testing and deployment
 
 name: CI/CD Pipeline
 
