--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,5 +1,6 @@
 # GitHub Actions CI/CD Pipeline
-# Automated testing and deployment
+# Implements the user's requested flow: Linting/Testing -> Docker Build -> Notification
+# Integration with Snyk for security
 
 name: CI/CD Pipeline
 
@@ -8,12 +9,16 @@ on:
     branches: [ main, master ]
   pull_request:
     branches: [ main, master ]
+  workflow_dispatch: # Allow manual trigger
 
 jobs:
-  # Backend Tests
+  # ------------------------------------------------------------------
+  # 1. LINTING AND TESTING (Parallel Jobs)
+  # ------------------------------------------------------------------
+  
   backend-test:
+    name: Backend (Test & Lint)
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v4
     
@@ -27,23 +32,24 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov
+        pip install pytest pytest-cov flake8
+    
+    - name: Lint with flake8
+      working-directory: ./backend
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings.
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     
     - name: Run tests
       working-directory: ./backend
       run: |
         pytest --cov=. --cov-report=xml
-    
-    - name: Upload coverage
-      uses: codecov/codecov-action@v4
-      with:
-        file: ./backend/coverage.xml
-        flags: backend
-
-  # Frontend Tests
+  
   frontend-test:
+    name: Frontend (Test, Lint & Build Check)
     runs-on: ubuntu-latest
-    
     steps:
     - uses: actions/checkout@v4
     
@@ -62,52 +68,72 @@ jobs:
       working-directory: ./frontend
       run: npm run lint
     
-    - name: Build
+    - name: Build Check
       working-directory: ./frontend
       run: npm run build
 
-  # Docker Build
-  docker-build:
+  # ------------------------------------------------------------------
+  # 2. SECURITY SCANNING (Snyk)
+  # ------------------------------------------------------------------
+  
+  snyk-scan:
+    name: Snyk Security Scan
     runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test]
-    
+    needs: [backend-test, frontend-test] # Run after basic checks pass
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        continue-on-error: true # Don't fail the build on vulnerability found, just report
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --all-projects
+
+  # ------------------------------------------------------------------
+  # 3. DOCKER BUILD
+  # ------------------------------------------------------------------
+
+  docker-build:
+    name: Docker Build
+    runs-on: ubuntu-latest
+    needs: [snyk-scan] # Run after security scan
     steps:
     - uses: actions/checkout@v4
     
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
     
-    - name: Build backend image
+    - name: Build Backend Image
       uses: docker/build-push-action@v5
       with:
         context: ./backend
-        push: false
+        push: false # Set to true if you have DOCKER_HUB_USERNAME configured
         tags: emotion-backend:latest
     
-    - name: Build frontend image
+    - name: Build Frontend Image
       uses: docker/build-push-action@v5
       with:
         context: ./frontend
         push: false
         tags: emotion-frontend:latest
 
-  # Discord Notification
+  # ------------------------------------------------------------------
+  # 4. NOTIFICATION
+  # ------------------------------------------------------------------
+
   notify:
+    name: Discord Notification
     runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test, docker-build]
-    if: always()
-    
+    if: always() # Run even if previous jobs failed
+    needs: [docker-build]
     steps:
-    - name: Send Discord notification
-      env:
-        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-      run: |
-        if [ "${{ job.status }}" == "success" ]; then
-          curl -H "Content-Type: application/json" \
-               -d '{"content": "✅ CI/CD Pipeline of metal health app passed successfully!"}' \
-               $DISCORD_WEBHOOK
-        else
-          curl -H "Content-Type: application/json" \
-               -d '{"content": "❌ CI/CD Pipeline of metal health app failed!"}' \
-               $DISCORD_WEBHOOK
-        fi
+      - name: Send Notification
+        uses: tsickert/discord-webhook@v5.3.0
+        with:
+          webhook-url: ${{ secrets.DISCORD_WEBHOOK_URL }}
+          content: "🚀 CI/CD Pipeline Finished for Emotion Analysis App!"
+          embed-title: "Workflow Status: ${{ needs.docker-build.result }}"
+          embed-description: "Commit: ${{ github.sha }} by ${{ github.actor }}"
+          embed-color: ${{ needs.docker-build.result == 'success' && 65280 || 16711680 }} # Green for success, Red for failure
