--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -32,7 +32,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        pip install pytest pytest-cov flake8
+        pip install -r requirements-dev.txt
     
     - name: Lint with flake8
       working-directory: ./backend
@@ -135,5 +135,7 @@ jobs:
           webhook-url: ${{ secrets.DISCORD_WEBHOOK_URL }}
           content: "🚀 CI/CD Pipeline Finished for Emotion Analysis App!"
           embed-title: "Workflow Status: ${{ needs.docker-build.result }}"
+          severity: "${{ contains(needs.*.result, 'failure') && 'error' || 'info' }}"
+          details: "Build Result: ${{ contains(needs.*.result, 'failure') && 'FAILED' || 'SUCCESS' }}"
           embed-description: "Commit: ${{ github.sha }} by ${{ github.actor }}"
           embed-color: ${{ needs.docker-build.result == 'success' && 65280 || 16711680 }} # Green for success, Red for failure
