--- a/.github/workflows/hf-sync.yml
+++ b/.github/workflows/hf-sync.yml
@@ -19,5 +19,5 @@ jobs:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
           git remote add hf https://Ganesh01110:$HF_TOKEN@huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACE_NAME }}
-          # Force push the backend subtree to the root of the HF Space
-          git subtree push --prefix backend hf main
+          # Use --force to overwrite default HF files and ensure sync
+          git push hf `git subtree split --prefix backend main`:main --force
