Fix dependency issues and TypeScript syntax errors
- Update torch dependency to use >=2.0.0 for compatibility
- Remove Python docstrings from TypeScript files
- Fix next.config.js to use ES module syntax
- Install and verify backend dependencies successfully

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -106,10 +106,10 @@ jobs:
       run: |
         if [ "${{ job.status }}" == "success" ]; then
           curl -H "Content-Type: application/json" \
-               -d '{"content": "✅ CI/CD Pipeline passed successfully!"}' \
+               -d '{"content": "✅ CI/CD Pipeline of metal health app passed successfully!"}' \
                $DISCORD_WEBHOOK
         else
           curl -H "Content-Type: application/json" \
-               -d '{"content": "❌ CI/CD Pipeline failed!"}' \
+               -d '{"content": "❌ CI/CD Pipeline of metal health app failed!"}' \
                $DISCORD_WEBHOOK
         fi
