--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -79,26 +79,49 @@ jobs:
   snyk-scan:
     name: Snyk Security Scan
     runs-on: ubuntu-latest
-    needs: [backend-test, frontend-test] # Run after basic checks pass
+    needs: [backend-test, frontend-test]
     steps:
       - uses: actions/checkout@v4
       
       - name: Run Snyk to check for vulnerabilities
         uses: snyk/actions/node@master
-        continue-on-error: true # Don't fail the build on vulnerability found, just report
+        continue-on-error: false # Fail on High severity
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --all-projects
+          args: --severity-threshold=high --all-projects
 
   # ------------------------------------------------------------------
-  # 3. DOCKER BUILD
+  # 3. PERFORMANCE AUDIT (Lighthouse)
+  # ------------------------------------------------------------------
+
+  lighthouse-audit:
+    name: Lighthouse Performance Audit
+    runs-on: ubuntu-latest
+    needs: [frontend-test]
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Audit Production URLs
+        uses: treosh/lighthouse-ci-action@v12
+        with:
+          urls: |
+            https://emotion-analysis-platform.vercel.app/
+            https://emotion-analysis-platform.vercel.app/dashboard
+            https://emotion-analysis-platform.vercel.app/history
+            https://emotion-analysis-platform.vercel.app/self-care
+          budgetPath: ./frontend/lighthouse-budget.json # Optional budget
+          uploadArtifacts: true # Save results as GitHub Artifacts
+          temporaryPublicStorage: true # Upload to temporary public storage
+
+  # ------------------------------------------------------------------
+  # 4. DOCKER BUILD
   # ------------------------------------------------------------------
 
   docker-build:
     name: Docker Build
     runs-on: ubuntu-latest
-    needs: [snyk-scan] # Run after security scan
+    needs: [snyk-scan, lighthouse-audit] # Run after security and performance checks
     steps:
     - uses: actions/checkout@v4
     
@@ -109,7 +132,7 @@ jobs:
       uses: docker/build-push-action@v5
       with:
         context: ./backend
-        push: false # Set to true if you have DOCKER_HUB_USERNAME configured
+        push: false
         tags: emotion-backend:latest
     
     - name: Build Frontend Image
@@ -120,20 +143,20 @@ jobs:
         tags: emotion-frontend:latest
 
   # ------------------------------------------------------------------
-  # 4. NOTIFICATION
+  # 5. NOTIFICATION
   # ------------------------------------------------------------------
 
   notify:
     name: Discord Notification
     runs-on: ubuntu-latest
-    if: always() # Run even if previous jobs failed
-    needs: [docker-build]
+    if: always()
+    needs: [docker-build, snyk-scan, lighthouse-audit]
     steps:
       - name: Send Notification
         uses: tsickert/discord-webhook@v5.3.0
         with:
           webhook-url: ${{ secrets.DISCORD_WEBHOOK_URL }}
           content: "🚀 CI/CD Pipeline Finished for Emotion Analysis App!"
-          embed-title: "Workflow Status: ${{ needs.docker-build.result }}"
-          embed-description: "Build Result: ${{ needs.docker-build.result }}\nCommit: ${{ github.sha }} by ${{ github.actor }}"
-          embed-color: ${{ needs.docker-build.result == 'success' && 65280 || 16711680 }} # Green for success, Red for failure
+          embed-title: "Workflow Status: ${{ job.status }}"
+          embed-description: "Commit: ${{ github.sha }} by ${{ github.actor }}"
+          embed-color: ${{ job.status == 'success' && 65280 || 16711680 }}
