--- a/.github/workflows/hf-frontend-sync.yml
+++ b/.github/workflows/hf-frontend-sync.yml
@@ -18,6 +18,6 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          git remote add hf https://Ganesh01110:$HF_TOKEN@huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_FRONTEND_SPACE_NAME }}
+          git remote add hf https://${{ secrets.HF_USERNAME }}:$HF_TOKEN@huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_FRONTEND_SPACE_NAME }}
           # Force push the frontend subtree to the root of the HF Space
           git push hf `git subtree split --prefix frontend main`:main --force
