--- a/.github/workflows/hf-sync.yml
+++ b/.github/workflows/hf-sync.yml
@@ -18,6 +18,6 @@ jobs:
         env:
           HF_TOKEN: ${{ secrets.HF_TOKEN }}
         run: |
-          git remote add hf https://Ganesh01110:$HF_TOKEN@huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACE_NAME }}
+          git remote add hf https://${{ secrets.HF_USERNAME }}:$HF_TOKEN@huggingface.co/spaces/${{ secrets.HF_USERNAME }}/${{ secrets.HF_SPACE_NAME }}
           # Use --force to overwrite default HF files and ensure sync
           git push hf `git subtree split --prefix backend main`:main --force
