--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,25 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.1.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "firebase": "^11.1.0",
+    "next": "14.0.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "firebase": "^10.14.1",
     "d3": "^7.9.0",
-    "recharts": "^2.15.0",
-    "react-calendar-heatmap": "^1.9.0",
     "idb": "^8.0.2",
     "lucide-react": "^0.468.0"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.0",
-    "@types/node": "^22",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/d3": "^7.4.3",
-    "eslint": "^9",
-    "eslint-config-next": "^15.1.6",
-    "tailwindcss": "^4.0.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.15",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5"
   }
 }
