--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -83,13 +83,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
-      - name: Run Snyk to check for vulnerabilities
+      - name: Snyk Frontend Scan (Node)
         uses: snyk/actions/node@master
-        continue-on-error: false # Fail on High severity
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --severity-threshold=high --all-projects
+          args: --severity-threshold=high --file=frontend/package.json
+      
+      - name: Snyk Backend Scan (Python)
+        uses: snyk/actions/python@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          args: --severity-threshold=high --file=backend/requirements.txt
 
   # ------------------------------------------------------------------
   # 3. PERFORMANCE AUDIT (Lighthouse)
@@ -152,11 +158,28 @@ jobs:
     if: always()
     needs: [docker-build, snyk-scan, lighthouse-audit]
     steps:
+      - name: Get current date
+        id: date
+        run: echo "date=$(date +'%m/%d/%Y %I:%M %p')" >> $GITHUB_OUTPUT
+
       - name: Send Notification
         uses: tsickert/discord-webhook@v5.3.0
         with:
           webhook-url: ${{ secrets.DISCORD_WEBHOOK_URL }}
-          content: "🚀 CI/CD Pipeline Finished for Emotion Analysis App!"
-          embed-title: "Workflow Status: ${{ job.status }}"
-          embed-description: "Commit: ${{ github.sha }} by ${{ github.actor }}"
-          embed-color: ${{ job.status == 'success' && 65280 || 16711680 }}
+          content: "🚀 CI/CD Pipeline Update"
+          embed-title: "GitHub Actions"
+          embed-description: |
+            • **Event**: ${{ github.event_name }}
+            • **Repo**: ${{ github.repository }}
+            • **Ref**: ${{ github.ref }}
+            • **Workflow**: ${{ github.workflow }}
+            • **Author**: ${{ github.actor }}
+            • **Committer**: ${{ github.actor }}
+            • **Pusher**: ${{ github.actor }}
+            • **Commit URL**: https://github.com/${{ github.repository }}/commit/${{ github.sha }}
+            • **Commit Message**: ${{ github.event.head_commit.message }}
+
+            Build Result: ${{ (needs.docker-build.result == 'success') && 'SUCCESS' || 'FAILURE' }}
+
+            Severity: Informational | ${{ steps.date.outputs.date }}
+          embed-color: ${{ (needs.docker-build.result == 'success') && 65280 || 16711680 }}
