--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,27 +10,24 @@
   },
   "dependencies": {
     "d3": "^7.9.0",
-    "firebase": "^10.14.1",
+    "firebase": "^11.1.0",
     "idb": "^8.0.2",
     "lucide-react": "^0.468.0",
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "next": "^15.1.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/d3": "^7.4.3",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
     "typescript": "^5"
-  },
-  "overrides": {
-    "undici": "5.28.4"
   }
 }
