--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "d3": "^7.9.0",
@@ -19,6 +19,7 @@
     "recharts": "^3.7.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
     "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^19",
