--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -83,6 +83,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+      
+      - name: Install Frontend dependencies
+        working-directory: ./frontend
+        run: npm ci
+
       - name: Snyk Frontend Scan (Node)
         uses: snyk/actions/node@master
         env:
@@ -90,6 +101,17 @@ jobs:
         with:
           args: --severity-threshold=high --file=frontend/package.json
       
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10'
+      
+      - name: Install Backend dependencies
+        working-directory: ./backend
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
       - name: Snyk Backend Scan (Python)
         uses: snyk/actions/python@master
         env:
