--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "d3": "^7.9.0",
+    "firebase": "^10.14.1",
+    "idb": "^8.0.2",
+    "lucide-react": "^0.468.0",
     "next": "14.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "firebase": "^10.14.1",
-    "d3": "^7.9.0",
-    "idb": "^8.0.2",
-    "lucide-react": "^0.468.0"
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/d3": "^7.4.3",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
