fix(deployment): resolve Hugging Face Space permission error
- Switched to standard HF 'user' (UID 1000) in backend Dockerfile.
- Moved Python dependencies to /home/user/.local to avoid root permission issues.
- Updated PATH and folder ownership for correct non-root execution.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,6 @@
 # Multi-stage build for optimized Python backend
 FROM python:3.10-slim as builder
 
-WORKDIR /app
-
 # Install build dependencies
 RUN apt-get update && apt-get install -y --no-install-recommends \
     gcc \
@@ -11,6 +9,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libxslt-dev \
     && rm -rf /var/lib/apt/lists/*
 
+WORKDIR /app
+
 # Copy and install Python dependencies
 COPY requirements.txt .
 RUN pip install --no-cache-dir --user -r requirements.txt
@@ -18,27 +18,33 @@ RUN pip install --no-cache-dir --user -r requirements.txt
 # Final stage
 FROM python:3.10-slim
 
+# Set up a new user named "user" with user ID 1000
+RUN useradd -m -u 1000 user
+USER user
+ENV HOME=/home/user \
+    PATH=/home/user/.local/bin:$PATH
+
 WORKDIR /app
 
-# Copy Python dependencies from builder
-COPY --from=builder /root/.local /root/.local
+# Copy Python dependencies from builder to the new user's local directory
+# We switch back to root briefly to copy and change ownership
+USER root
+COPY --from=builder /root/.local /home/user/.local
+RUN chown -R user:user /home/user/.local
 
-# Make sure scripts in .local are usable
-ENV PATH=/root/.local/bin:$PATH
+# Switch back to the non-root user
+USER user
 
 # Copy application code
-COPY . .
+COPY --chown=user:user . .
 
-# Create non-root user for security
-RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
-USER appuser
-
-# Expose port
+# Expose port (standard HF Spaces port)
 EXPOSE 7860
 
 # Health check
+# Note: uses the container's python to run a quick health check
 HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
-    CMD python -c "import requests; requests.get('http://localhost:7860/health')" || exit 1
+    CMD python -c "import urllib.request; urllib.request.urlopen('http://localhost:7860/health')" || exit 1
 
 # Run the application
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "7860"]
